<resources>
    <string name="app_name">CustomViewCase</string>
    <string name="saturation_page_title">图片饱和度</string>
    <string name="beauty_image_description">饱和度调整示例图片</string>
    <string name="saturation_value">饱和度：%1$s</string>
    <string name="saturation_default_value">饱和度：1.00</string>
    <string name="saturation_range_hint">0.00 黑白　　1.00 原图　　2.00 艳丽</string>
    <string name="progress_image_page_title">图片裁剪进度</string>
    <string name="progress_image_description">从下到上显示进度的图片</string>
    <string name="progress_image_saturation_value">饱和度：%1$s</string>
    <string name="progress_image_saturation_default_value">饱和度：1.00</string>
    <string name="progress_image_score_value">分数：%1$d/%2$d</string>
    <string name="progress_image_score_default_value">分数：50/150</string>
    <string name="progress_image_direction_hint">进度方向：从下到上</string>
    <string name="appwidget_text">Hello Widget!</string>
    <string name="open_app">打开应用</string>
    <string name="add_widget">添加 Widget</string>
    <string name="app_widget_description">最简单的桌面 Widget 示例</string>
</resources>
