<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.SaturationProgressImageViewActivity">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_image_page_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.clow.customviewcase.widget.SaturationProgressImageView
        android:id="@+id/progressImage"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/progress_image_description"
        android:scaleType="fitXY"
        android:src="@mipmap/bg_progress"
        app:layout_constraintBottom_toTopOf="@id/saturationValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pageTitle" />

    <TextView
        android:id="@+id/saturationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_image_saturation_default_value"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintBottom_toTopOf="@id/saturationSeekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/saturationSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="200"
        android:progress="100"
        app:layout_constraintBottom_toTopOf="@id/saturationRange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/saturationRange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/saturation_range_hint"
        app:layout_constraintBottom_toTopOf="@id/progressValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/progressValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/progress_image_progress_default_value"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintBottom_toTopOf="@id/progressSeekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/progressSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@id/progressDirection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/progressDirection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/progress_image_direction_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
